--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,9 @@ LABEL authors="Aberson Malivert(amaliver@redhat.com),Ashley Kim(akim@redhat.com,
 USER root 
 RUN dnf install -y python3-pip
 RUN dnf -y install gpgme-devel
-#RUN dnf -y install insights-client
 RUN python3 -m pip uninstall insights-client
 RUN cd /usr/local/bin/
-RUN git clone https://github.com/amalivert/certification_notifier.git && cd certification_notifier && git checkout dev && python3 -m pip uninstall -r requirements.txt && python3 -m pip install -r requirements.txt
+RUN git clone https://github.com/amalivert/certification_notifier.git && cd certification_notifier && git checkout dev && python3 -m pip uninstall -r requirements.txt && python3 -m pip install -r requirements.txt %% chmod u+x rh_cert_notify.py
 CMD [ "python3", "./rh_cert_notify.py"]
 
 
